--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
         <h1>როგორ გვეხმარება მათემატიკა პროგრამირებაში?</h1>
         <div id="div-one">
-            <iframe src="https://www.youtube.com/embed/bnCaLL07raM" title="4 video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Z8hE1UNY6Vo" title="4 video corrected" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </section>
 
@@ -43,7 +43,7 @@
         
         <h1>რობოტიკისა და პროგრამირების როლი დღევანდელ რეალობაში</h1>
         <div id="div-one">
-            <iframe src="https://www.youtube.com/embed/PVL3tGATMUI" title="5 video" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/hBSSUeFa4MM" title="5 video corrected" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 
         <a href="https://www.youtube.com/shorts/wEsEtT408jc"><button class="a2">CGI ავატარში</button></a>
